# dataplane-sdk-rust

./: Cargo.toml
.github/workflows/: ci.yml
crates/sdk/: Cargo.toml
crates/sdk-axum/: Cargo.toml
crates/sdk-axum/src/: api.rs  api_tests.rs  error.rs  lib.rs  router.rs
crates/sdk-postgres/: Cargo.toml
crates/sdk-postgres/migrations/: 20260218164640_create_data_flows.sql
crates/sdk-postgres/src/: data_flow.rs  lib.rs  tx.rs
crates/sdk-postgres/src/data_flow/: model.rs  repo.rs
crates/sdk-postgres/tests/: data_flow.rs
crates/sdk-sqlite/: Cargo.toml
crates/sdk-sqlite/migrations/: 20260218164640_create_data_flows.sql
crates/sdk-sqlite/src/: data_flow.rs  lib.rs  tx.rs
crates/sdk-sqlite/src/data_flow/: model.rs  repo.rs
crates/sdk-sqlite/tests/: data_flow.rs
crates/sdk-tck-tests/: Cargo.toml
crates/sdk-tck-tests/tests/: dps.tck.properties  tck_tests.rs  util.rs
crates/sdk/src/: core.rs  error.rs  lib.rs  sdk.rs  sdk_test.rs
crates/sdk/src/core/: db.rs  error.rs  handler.rs
crates/sdk/src/core/db/: data_flow.rs  memory.rs  test_suite.rs  tx.rs
crates/sdk/src/core/db/data_flow/: memory.rs
crates/sdk/src/core/model/: data_address.rs  data_flow.rs  messages.rs  participant.rs
crates/sdk/src/sdk/: internal.rs
examples/example-common/: Cargo.toml
examples/example-common/src/: controlplane.rs  lib.rs  signaling.rs  util.rs
examples/sync-pull-dataplane/: Cargo.toml  README.md  consumer.config.toml  provider.config.toml  scenario.config.toml
examples/sync-pull-dataplane/migrations/: 20260219164640_create_tokens.sql
examples/sync-pull-dataplane/src/: api.rs  app_client.rs  config.rs  handler.rs  launcher.rs  lib.rs  tokens.rs
examples/sync-pull-dataplane/src/api/: public.rs  tokens.rs
examples/sync-pull-dataplane/src/tokens/: manager.rs  model.rs  repo.rs
examples/sync-pull-dataplane/src/tokens/repo/: memory.rs  postgres.rs  sqlite.rs
