[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]


[workspace.package]
license = "Apache-2.0"
edition = "2024"
version = "0.1.0"
authors = ["Enrico Risa <enrico.risa@gmail.com>"]


[workspace.dependencies]
tokio = {  version= "1.43.0", features=["full"] }
sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "uuid", "chrono"]}
axum = { version = "0.8.8", features = ["macros"]}
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tower = { version = "0.5.2", features = ["util"] }
reqwest = { version="0.13.2",  features= ["json"]}
http-body-util = "0.1.0"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version= "0.3.18" , features = ["env-filter"] }
serde_json = "1"
bon = "3.9.0"
chrono = { version = "0.4.44", features = ["serde"]}
async-trait = "0.1.88"
thiserror = "2.0.11"
mockall = "0.14.0"
uuid = { version = "1.22.0", features = ["v4", "serde"]}
testcontainers = "0.26"
testcontainers-modules =  "0.14"
anyhow = "1.0.95"

[workspace.lints.clippy]
unwrap_used = "deny"
