[package]
name = "dataplane-sdk-axum"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
axum.workspace=true
serde_json.workspace=true
tracing.workspace=true
dataplane-sdk= { path="../../crates/sdk" }
anyhow.workspace=true
serde.workspace=true

[dev-dependencies]
mockall.workspace=true
async-trait.workspace=true
tokio.workspace=true
tower.workspace=true
http-body-util.workspace=true
rstest.workspace=true

[lints]
workspace = true
