[package]
name = "dataplane-sdk-postgres"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
dataplane-sdk = {  path = "../sdk", version = "0.1.0" }
async-trait.workspace=true
sqlx = { workspace=true, features = ["postgres"]}
bon.workspace=true
chrono.workspace=true
serde_json.workspace=true


[dev-dependencies]
tokio.workspace=true
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
dataplane-sdk = {  path = "../sdk", version = "0.1.0", features = ["test"] }
