[package]
name = "dataplane-sdk-sqlite"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
dataplane-sdk = {  path = "../sdk", version = "0.1.0" }
async-trait.workspace=true
sqlx = {workspace=true, features = ["sqlite"]}
bon.workspace=true
chrono.workspace=true
serde_json.workspace=true


[dev-dependencies]
tokio.workspace=true
dataplane-sdk = {  path = "../sdk", version = "0.1.0", features = ["test"] }
