[package]
name = "dataplane-sdk-tck-tests"
license.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true

[dev-dependencies]
dataplane-sdk = {  path = "../sdk", version = "0.1.0" }
dataplane-sdk-postgres = {  path = "../sdk-postgres", version = "0.1.0" }
dataplane-sdk-axum = {  path = "../sdk-axum", version = "0.1.0" }
sqlx = { workspace=true, features = ["postgres"]}
tokio.workspace=true
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
tracing.workspace=true
tracing-subscriber.workspace=true
anyhow.workspace=true
async-trait.workspace=true
axum.workspace=true
tower-http = { version = "0.6.9", features = ["trace"]}
futures.workspace=true
regex.workspace=true
bon.workspace=true

[lints]
workspace = true
