[package]
name = "dataplane-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true


[dependencies]
serde.workspace=true
serde_json.workspace=true
bon.workspace=true
chrono.workspace=true
thiserror.workspace=true
async-trait.workspace=true
uuid = { workspace=true }
reqwest.workspace=true

[features]
test = []


[dev-dependencies]
mockall.workspace=true
tokio.workspace=true
wiremock = "0.6"

[lints]
workspace = true
